removed test-mktemp

--- a/Makefile.config
+++ b/Makefile.config
@@ -102,7 +102,7 @@ HOSTNAME   := myhostname
 # What is the safest way to create a tempfile.
 # Default is to figure it out by testing various methods.
 # Replace this with a known platform-specific method
-MKTEMP     := $(shell ./test-mktemp)
+#MKTEMP     := $(shell ./test-mktemp)
 
 # Munin version number.
 VERSION    := $(shell ./getversion)
